--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Welcome MGM's College of CS & IT</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-<header>
-  <div class="head">
-     <div class="email">
-        <i class="fa-solid fa-envelope"></i>
-        <a href="/">ccsit@mgmccsit.ac.in</a>
-     </div>
-    <div class="address">
-        
-    </div>
-  </div>
-</header>
+      <header>
+        <div class="head-line">
+          <div class="email">
+            <i class="fa-solid fa-envelope"></i>
+            <a href="">ccsit@mgmccsit.ac.in</a>
+          </div>
+          <div class="address">
+            <i class="fa-solid fa-location-dot"></i>
+            <a href="/" class="address-i">Near Airport Road, Nanded - 431605</a>
+            <br />
+            <i class="fa-solid fa-location-dot"></i>
+            <a href="/">NAAC Info</a>
+          </div>
+        </div>
+        <div class="head-block">
+          <img src="mgm-banner.jpg" alt="mgm-banner" srcset="" />
+        </div>
+        <!-- ---------------------------------------------------------------------------------------- -->
+
+        <!-- ------------------------------------------------------------------------------------------------- -->
+      </header>
+
+      <nav>
+        <ul>
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>COURSES</li>
+          <li>ACADEMICS</li>
+          <li>STUDENT ACTIVITIES</li>
+          <li>FACILITIES</li>
+          <li>PLACEMENTS</li>
+          <li>ACHIEVEMENTS</li>
+          <li>IQAC</li>
+          <li>ACCREDITATION</li>
+          <li>DOWNLOAD</li>
+        </ul>
+      </nav>
+      <!-- ---------------------------------------------- -->
+      <div class="main-photo">
+        <img src="MGM College 1.jpg" alt="" />
+      </div>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
